Fix spacing

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,8 +11,8 @@
 .headline {
   background-image: url(../images/mobile_intro_bg.png);
   background-size: cover;
-  margin: 24px;
-  padding: 48px 0;
+  margin: 24px 0;
+  padding: 48px 24px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -27,7 +27,7 @@
     background-image: url(../images/main_big.png);
     height: 100vh;
     padding: 0 10%;
-    margin: 12px;
+    margin: 12px 0;
 
     .content {
       width: 60%;
