--- a/sass/index.scss
+++ b/sass/index.scss
@@ -14,7 +14,6 @@ body {
 }
 
 .logo {
-  padding: 0 12px;
   color: $primary;
   font-size: 20px;
 }
